--- a/app/views/promoter/profiles/show.html.erb
+++ b/app/views/promoter/profiles/show.html.erb
@@ -1,11 +1,18 @@
 <div class="container">
-  <div>
-    <% if user_signed_in? && current_user.profile == @profile %>
-      <%#= link_to "Show Editor", "/editor" + request.path, id: "edit_link", class: "btn btn-large" %>
-      <%= link_to "Edit Profile", edit_promoter_profile_path(@profile), class: 'btn' %>
-    <% elsif user_signed_in? %>
-      <%= link_to "Tour Request", class: 'btn btn-large' %>
-    <% end %>
+  <div class="row">
+    <div class="span3">
+      <% if user_signed_in? && current_user.profile == @profile %>
+        <%#= link_to "Show Editor", "/editor" + request.path, id: "edit_link", class: "btn btn-large" %>
+        <%= link_to "Edit Profile", edit_promoter_profile_path(@profile), class: 'btn' %>
+      <% elsif user_signed_in? && current_user.promoters.include?(@profile.user) %>
+        <button class="btn btn-success">Tour Requested <i class="icon-check icon-white"></i></button>
+      <% elsif user_signed_in? %>
+        <%= link_to "Request Tour", requests_path(promoter_id: @profile.user_id), class: "btn btn-large", method: :post %>
+      <% end %>
+    </div>
+    <div class="span3">
+      <strong>Tour Requests: <span class="badge"><%= @requests.count || "None right now" %></span></strong>
+    </div>
   </div>
   <section class="section-box">
     <div class="row">
