--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -19,7 +19,7 @@
           <% end %>
           <li class="divider"></li>
           <li>
-            <%= link_to "All Requests >>", promoter_requests_path, class: "btn btn-large" %>
+            <%= link_to "All Requests >>", requests_path, class: "btn btn-large" %>
             <!-- <a href="" class="btn btn-large">All Requests >></a> -->
           </li>
         </ul>
