--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -1,37 +1,50 @@
 <div class="container-fluid">
   <div class="row-fluid row">
-    <div class="span3">
-      <div class="well sidebar-nav-fixed" id="">
+    <div class="span2">
+      <% if current_user.avatar? %>
+        <%= filepicker_image_tag current_user.avatar, w: 75, h: 75, fit: 'crop' %>
+      <% else %>
+        <img src="//placehold.it/75" class="img-polaroid">
+      <% end %>
+    </div>
+    <div class="span8">
+      <div class="page-header">
+          <h2>
+            Hi <%= current_user.name %>
+            <small>This is your promoter administrative area</small>
+          </h2>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid row">
+    <div class="span4">
+      <h4>Recent Updates</h4>
+      <div class="well sidebar-nav-fixed" id="update">
         <ul class="nav nav-list">
-          <li class="nav-header">Today's Sales <span class="badge badge-info pull-right"><%= @sales.count %></span></li>
-          <% @sales.each do |s| %>
-          <dd><%= s.name %>, <%= Event.find(s.event_id).artist %>, <%= pluralize(s.quantity, "ticket") %></dd>
+          <li class="nav-header">Today's Sales </li>
+          <dd>event <span class="badge badge pull-right">5</span></dd>
+          <dd>event <span class="badge badge pull-right">5</span></dd>
+          <dd>event <span class="badge badge pull-right">5</span></dd>
+          <li class="divider"></li>
+          <li class="nav-header">Unread Tour requests <span class="badge badge-info pull-right"><%= @tour_requests.count %></span></li>
+          <% @tour_requests.limit(3).each do |r| %>
+          <dd><%= r.user.name %> <%= distance_of_time_in_words_to_now(r.created_at, include_seconds = false) %> ago</dd>
           <% end %>
           <li class="divider"></li>
-          <li class="nav-header">Tour requests <span class="badge badge-info pull-right">8</span></li>
-          <li><a href="">From Artist re:show</a> </li>
-          <li><a href="">From Artist re:show</a> </li>
-          <li><a href="">From Artist re:show</a> </li>
-          <li class="divider"></li>
-          <li class="nav-header">Support Requests <span class="badge badge-info pull-right"><%= @requests.count %></span></li>
-          <% @requests.each do |r| %>
+          <li class="nav-header">Unread Support Requests <span class="badge badge-info pull-right"><%= @support_requests.count %></span></li>
+          <% @support_requests.limit(3).each do |r| %>
           <dd><%= r.user.name %> <%= distance_of_time_in_words_to_now(r.created_at, include_seconds = false) %> ago</dd>
           <% end %>
           <li class="divider"></li>
           <li>
             <%= link_to "All Requests >>", requests_path, class: "btn btn-large" %>
-            <!-- <a href="" class="btn btn-large">All Requests >></a> -->
           </li>
         </ul>
       </div><!--/.well -->
     </div><!--/span-->
 
-    <div class="span9 span-fixed-sidebar">
-      <div class="page-header">
-        <h2>Hi <%= current_user.name %>
-        <small>This is your promoter administrative area</small></h2>
+    <div class="span8 span-fixed-sidebar">
 
-      </div>
       <div class="row-fluid">
 
         <div class="span6">
