--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -16,10 +16,8 @@
     <%= f.input :music %>
     <%= f.label :image, "Upload Artist Images" %>
     <%= f.filepicker_field :image, button_class: "btn btn-primary btn-medium"  %>
-    <%= f.simple_fields_for :location do |location| %>
-        <%= location.input :address %>
-    <% end %>
-
+    <%= f.association :location, label_method: :city, include_blank: false, label: "Choose City" %>
+    <%= f.input :new_location, label: "Or Enter Full Address", placeholder: "123 Cleveland Street, Dublin, Ireland" %>
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
