DB alterations to users

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,28 +8,23 @@
 	</div>
 	<div class="row">
 		<div class="span3">
-			<aside id="events-searchbar">
+			<aside id="index-filter">
 				<div class="well">
-				<header>
-					<h3></h3>
-				</header>
-				<header>
-					<h4>Search Controls</h4>
-				</header>
-				<div class="">
-					<ul class="nav nav-list">
-						<li class="nav-header">Date</li>
-						<li class=""><a href="">Tonight</a></li>
-						<li class=""><a href="">This Week</a></li>
-						<li class="active"><a href="">This Month</a></li>
-						<li class="divider"></li>
-						<li class="nav-header">Location</li>
-						<li class="active"><a href="">Near me</a></li>
-						<li class=""><a href="">Same Country</a></li>
-						<li class=""><a href="">Anywhere</a></li>
-						<li class="divider"></li>
-					</ul>
-				</div>
+					<header>
+						<h4>Search Controls</h4>
+					</header>
+						<ul class="nav nav-list">
+							<li class="nav-header">Date</li>
+							<li class=""><a href="">Tonight</a></li>
+							<li class=""><a href="">This Week</a></li>
+							<li class="active"><a href="">This Month</a></li>
+							<li class="divider"></li>
+							<li class="nav-header">Location</li>
+							<li class="active"><a href="">Near me</a></li>
+							<li class=""><a href="">Same Country</a></li>
+							<li class=""><a href="">Anywhere</a></li>
+							<li class="divider"></li>
+						</ul>
 				</div>
 			</aside>
 		</div>
