got todays sales query working

--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -22,9 +22,9 @@
       <div class="well sidebar-nav-fixed" id="update">
         <ul class="nav nav-list">
           <li class="nav-header">Today's Sales </li>
-          <dd>event <span class="badge badge pull-right">5</span></dd>
-          <dd>event <span class="badge badge pull-right">5</span></dd>
-          <dd>event <span class="badge badge pull-right">5</span></dd>
+          <% @sales.each do |s| %>
+            <dd><%= s.event.artist %> <span class="badge badge pull-right"><%= s.quantity %></span></dd>
+          <% end %>
           <li class="divider"></li>
           <li class="nav-header">Unread Tour requests <span class="badge badge-info pull-right"><%= @tour_requests.count %></span></li>
           <% @tour_requests.limit(3).each do |r| %>
@@ -50,7 +50,7 @@
         <div class="span6">
           <h4>Public Profile</h4>
 
-          <p>Your public profile is where people can view information and statistics about all the shows you have organized. You can edit it in place by clicking on the edit link at the top of your profile. You can also hide or delete your profile at any time, by default your profile is hidden. </p>
+          <p>Your public profile is where people can view information and statistics about all the shows you have organized. You can edit it in place by clicking on the edit link at the top of your profile. You can also hide or delete your profile at any time, by default your profile is hidden. </p> <br>
           <% if current_user.profile %>
             <p><%= link_to "View >>", promoter_profile_path(current_user.profile), class: "btn btn-primary" %></p>
           <% else %>
@@ -62,11 +62,8 @@
           <p>All your current and past events are listed here. You can edit the event details, including applying on-the-fly ticket discounts (info docs for more) as well as viewing all current tickets sales and customer details. Charges and refunds can also be applied in this section, either in bulk or isolation. </p>
           <p><%= link_to "View >>", promoter_events_path, class: "btn btn-primary" %></p>
         </div>
-
-
-
+        <br>
       <div class="row-fluid">
-        <div class="page-header"></div>
         <div class="span6">
           <h4>Payments</h4>
           <p>In order to receive sales monies into your bank account, you need to connect a Stripe account to your 100 Motels account. After you create a Public Profile you'll see a 'connect with Stripe' button that'll take you to Stripe.com. Fill out the application form or log into your Stripe account and you're done.</p>
@@ -76,9 +73,9 @@
               <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
             <% end %></p>
         </div><!--/span-->
-        <div class="span5">
+        <div class="span6">
           <h4>Your Account</h4>
-          <p>This is your normal user account where you can update or change basic details like your password, primary email etc. If you are also a customer of other 100 Motels promoters you can add or update a credit card here. </p>
+          <p>This is your normal user account where you can update or change basic details like your password, primary email etc. If you are also a customer of other 100 Motels promoters you can add or update a credit card here. </p> <br><br>
           <p><%= link_to "View >>", user_path(current_user), class: "btn btn-primary" %></p>
         </div><!--/span-->
       </div>
