--- a/app/views/events/_body_holder.html.erb
+++ b/app/views/events/_body_holder.html.erb
@@ -34,4 +34,4 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-				<p class="lead"> Thanks and see you at the show! <br> <%= @promoter.promoter_name? %></p>
+				<p class="lead"> Thanks and see you at the show! <br> <%= @promoter.try(:promoter_name) %></p>
