--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,7 +21,9 @@
 			<div class="label-box">Ticket Info</div>
 				<div class="span3">
 					<% if @event.image? %>
-						<%= filepicker_image_tag @event.image, w: 300, h: 300, fit: 'crop' %>
+						<%= filepicker_image_tag @even
+
+						t.image, w: 300, h: 300, fit: 'crop' %>
 					<% else %>
 						<img src="//quickimage.it/300&text=Artist">
 					<% end %>
