--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -134,8 +134,8 @@
 	              <tbody>
 		                <% @orders.each do |order| %>
 		                <tr>
-		                  <td><%= link_to "#{promoter(order).name}", promoter_profile_path(promoter(order)) %></td>
-		                  <td><%= link_to "#{Event.find(order.event_id).artist}", event_path(Event.find(order.event_id)) %></td>
+		                  <td><%= link_to "#{order.event.profile.user.name}", promoter_profile_path(order.event.profile) %></td>
+		                  <td><%= link_to "#{order.event.artist}", event_path(order.event) %></td>
 		                  <td><%= order.stripe_event %></td>
 		                  <td><%= time_tag order.created_at %></td>
 		                  <% if order.stripe_event == :pending %>
