--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,34 +103,81 @@
 				</header>
 				<div id="promoters-carousel" class="carousel slide" data-interval="false">
 					<div id="promoters" class="carousel-inner">
-						<div class="item active">
+						<% @profiles.each_slice(4) do |profile| %>
+						<div class="item">
 								<ul class="thumbnails">
-									<% @profiles.each do |profile| %>
 									<li class="span3">
 										<div class="thumbnail">
-											<% if profile.image? %>
-			                  <%= filepicker_image_tag profile.image, w: 360, h: 360, fit: 'crop' %>
-			                <% else %>
-			                  <img src="http://placehold.it/360x360" alt="">
-			                <% end %>
-											<div class="caption">
-												<h3 class="title"><%= profile.promoter_name %></h3>
-												<h4>Location</h4>
-												<%= button_to "Full Profile", promoter_profile_path(profile), method: :get, class: "btn btn-primary" %>
-											</div>
+											<% if profile[0] %>
+												<% if profile[0].image? %>
+				                  <%= filepicker_image_tag profile[0].image, w: 360, h: 360, fit: 'crop' %>
+				                <% else %>
+				                  <img src="http://placehold.it/360x360" alt="">
+				                <% end %>
+													<div class="caption">
+														<h3 class="title"><%= profile[0].promoter_name || profile[0].user.name %></h3>
+														<h4>location</h4>
+														<%= button_to "Full Profile", promoter_profile_path(profile[0]), method: :get, class: "btn btn-primary" %>
+												</div>
+											<% end %>
 										</div>
 									</li>
-									<% end %>
+									<li class="span3">
+										<div class="thumbnail">
+											<% if profile[1] %>
+												<% if profile[1].image? %>
+				                  <%= filepicker_image_tag profile[1].image, w: 360, h: 360, fit: 'crop' %>
+				                <% else %>
+				                  <img src="http://placehold.it/360x360" alt="">
+				                <% end %>
+												<div class="caption">
+													<h3 class="title"><%= profile[1].promoter_name || profile[1].user.name %></h3>
+													<h4>location</h4>
+													<%= button_to "Full Profile", promoter_profile_path(profile[1]), method: :get, class: "btn btn-primary" %>
+												</div>
+											<% end %>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="thumbnail">
+											<% if profile[2] %>
+												<% if profile[2].image? %>
+				                  <%= filepicker_image_tag profile[2].image, w: 360, h: 360, fit: 'crop' %>
+				                <% else %>
+				                  <img src="http://placehold.it/360x360" alt="">
+				                <% end %>
+												<div class="caption">
+													<h3 class="title"><%= profile[2].promoter_name || profile[2].user.name %></h3>
+													<h4>location</h4>
+													<%= button_to "Full Profile", promoter_profile_path(profile[2]), method: :get, class: "btn btn-primary" %>
+												</div>
+											<% end %>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="thumbnail">
+											<% if profile[3] %>
+												<% if profile[3].image? %>
+				                  <%= filepicker_image_tag profile[3].image, w: 360, h: 360, fit: 'crop' %>
+				                <% else %>
+				                  <img src="http://placehold.it/360x360" alt="">
+				                <% end %>
+												<div class="caption">
+													<h3 class="title"><%= profile[3].promoter_name || profile[3].user.name %></h3>
+													<h4>location</h4>
+													<%= button_to "Full Profile", promoter_profile_path(profile[3]), method: :get, class: "btn btn-primary" %>
+												</div>
+											<% end %>
+										</div>
+									</li>
 								</ul>
-							<div class="carousel-caption">
-								<!-- <h4>A vetted list of showmakers</h4> -->
-								<p> The promoters listing will be of interest to artists looking to play in a specific locality. Click on an individual profile for a detailed breakdown on what each promoter has to offer.</p>
-							</div>
 						</div>
+						<% end %>
 					</div>
 					<a class="left carousel-control" href="#promoters-carousel" data-slide="prev">‹</a>
 					<a class="right carousel-control" href="#promoters-carousel" data-slide="next">›</a>
 				</div>
+			</section>
 
 			<section id="promoter-apply">
 				<div class="well well-large">
