--- a/app/views/promoter/profiles/index.html.erb
+++ b/app/views/promoter/profiles/index.html.erb
@@ -14,10 +14,9 @@
       </header>
       <form class="form">
         <div class="">
-          <label>Choose a City</label>
           <%= select_tag "promoter_city", options_for_select(@options), prompt: "Filter by City"  %>
           <br>
-          <h4>Filter your results</h4> <br>
+          <h4>Sort your results</h4> <br>
           <ul class="nav nav-list">
             <li class="nav-header">Event Average</li>
             <li class=""><a href="">Sales</a></li>
@@ -47,9 +46,9 @@
                 <% end %>
               </a>
               <h3>
-                <%= up.profile.try(:promoter_name) %>
+                <%= up.profile.promoter_name || up.name  %>
               </h3>
-              <p><%= up.profile.try(:quick_profile) %>.</p>
+              <p><%= up.profile.quick_profile || "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ." %>.</p>
               <p><%= button_to "View Profile", promoter_profile_path(up.profile), method: :get, class: "btn button-primary" %></p>
             </li>
             <% end %>
