--- a/app/views/promoter/profiles/show.html.erb
+++ b/app/views/promoter/profiles/show.html.erb
@@ -40,7 +40,7 @@
             <% end %>
           </h2>
         </div>
-        <h4><p class="muted">Vancouver, Canada.</p></h4>
+        <h4><p class="muted"><%= @profile.user.location.city %>, <%= @profile.user.location.country %></p></h4>
       </div>
       <div class="span2 offset2">
         <fieldset>
