--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -99,7 +99,7 @@
 
 			<section id="new-promoters">
 				<header>
-					<h3 class="page-header"><i class="icon-globe"></i>Promoters near <%= @current_address %></h3>
+					<h3 class="page-header"><i class="icon-globe"></i>Promoters near <%= @location %></h3>
 				</header>
 				<div id="promoters-carousel" class="carousel slide" data-interval="false">
 					<div id="promoters" class="carousel-inner">
